--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "jwt-decode": "^4.0.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
@@ -20,9 +20,9 @@
     "sass": "^1.69.7"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.11.3",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
