--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "jwt-decode": "^4.0.0",
     "next": "^14.0.4",
+    "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
