--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.7"
   },
@@ -24,6 +25,7 @@
     "@types/node": "^20.11.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "typescript": "^5.3.3"
   }
 }
